[gd_scene load_steps=2 format=3 uid="uid://dykb0358fdog2"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_bmseu"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmseu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -132.5
offset_right = 95.0
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="resumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="saveButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="quitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
